crates/rooch-integration-test-runner/tests/cases/private_generics_indirect_call.exp
processed 3 tasks

task 1 'publish'. lines 3-8:
status EXECUTED

task 2 'publish'. lines 10-38:
Error: error: resource type "KeyStruct" in function "0x2::context::remove_object" not defined in current module or not allowed
   ┌─ /tmp/tempfile:31:34
   │
31 │         let (_id,_owner,value) = context::remove_object<KeyStruct>(ctx, object_id);
   │                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: resource type "KeyStruct" in function "0x2::account_storage::global_move_to" not defined in current module or not allowed
   ┌─ /tmp/tempfile:32:9
   │
32 │         account_storage::global_move_to(ctx, sender, value);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: resource type "KeyStruct" in function "0x42::test::publish_foo" not defined in current module or not allowed
   ┌─ /tmp/tempfile:27:9
   │
27 │         publish_foo<KeyStruct>(ctx, s)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


